--- a/dashboard_public_working_V2.html
+++ b/dashboard_public_working_V2.html
@@ -608,6 +608,11 @@
                 <img src="data/ecoexist logo white.png" alt="Ecoexist Logo" height="40" class="me-2">
                 Ecoexist Elephant Tracking Dashboard - Public
             </a>
+            <div class="ms-auto d-flex align-items-center">
+                <span class="navbar-text text-white me-3">
+                    Privacy-Protected Animal Movement Data
+                </span>
+                </a>
             </div>
         </div>
     </nav>
