--- a/dashboard_public_working_V3.html
+++ b/dashboard_public_working_V3.html
@@ -767,7 +767,7 @@
                     Privacy-Protected Animal Movement Data
                 </span>
                 <a href="donations.html" class="btn-donate-nav">
-                    💚 Support Our Work
+                    Support Our Work
                 </a>
             </div>
         </div>
