--- a/donations.html
+++ b/donations.html
@@ -14,7 +14,11 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f8f9fa;
+            background-image: url('data/ele_1.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
             min-height: 100vh;
         }
 
@@ -467,7 +471,7 @@
                 Ecoexist Trust
             </a>
             <div class="ms-auto">
-                <a href="https://ecoexist.github.io/Elephant-Tracking/dashboard_public_working_V3.html" class="btn-back">
+                <a href="https://ecoexist.github.io/Elephant-Tracking/dashboard_public_working_V2.html" class="btn-back">
                     <i class="fas fa-arrow-left"></i> Back to Dashboard
                 </a>
             </div>
