--- a/donations.html
+++ b/donations.html
@@ -470,8 +470,11 @@
                 <img src="data/ecoexist logo white.png" alt="Ecoexist Logo" height="40" class="me-2">
                 Ecoexist Trust
             </a>
-            <div class="ms-auto">
-                <a href="https://ecoexist.github.io/Elephant-Tracking/dashboard_public_working_V3.html" class="btn-back">
+            <div class="d-flex">
+                <a href="projects.html" class="btn-back me-2">
+                    <i class="fas fa-project-diagram me-1"></i>Explore Our Projects
+                </a>
+                <a href="https://ecoexist.github.io/Elephant-Tracking/dashboard_public_working_V2.html" class="btn-back">
                     <i class="fas fa-arrow-left"></i> Back to Dashboard
                 </a>
             </div>
