--- a/donations.html
+++ b/donations.html
@@ -596,7 +596,7 @@
                                 <p>Each collar provides critical tracking data including:</p>
                                 <ul>
                                     <li>Real-time GPS coordinates (hourly updates)</li>
-                                    <li>Battery life: 12-18 months</li>
+                                    <li>Battery life: 24-36 months</li>
                                     <li>Satellite communication system</li>
                                     <li>Activity sensors and health monitoring</li>
                                     <li>Helps prevent human-wildlife conflict</li>
@@ -634,9 +634,8 @@
                                 <h5 style="color: #2c5530; margin-bottom: 15px;">Aerial Survey Operations</h5>
                                 <p>Fixed-wing aircraft enable us to:</p>
                                 <ul>
-                                    <li>Monitor elephant herds across vast territories</li>
+                                    <li>Find elephants and monitor the collaring operation</li>
                                     <li>Conduct population surveys</li>
-                                    <li>Assess habitat conditions</li>
                                     <li>Cover 1,000+ km² per flight</li>
                                     <li>Verify GPS collar functionality</li>
                                 </ul>
