--- a/donations.html
+++ b/donations.html
@@ -632,7 +632,7 @@
                             </button>
                             <div class="more-info-text">
                                 <h5 style="color: #2c5530; margin-bottom: 15px;">Aerial Survey Operations</h5>
-                                <p>Fixed-wing aircraft enable us to:</p>
+                                <p>Fixed wing aircraft enable us to:</p>
                                 <ul>
                                     <li>Find elephants and monitor the collaring operation</li>
                                     <li>Conduct population surveys</li>
